add junit tests and fix errors in register and patch user